<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/back_fill_F6"
    android:layoutDirection="rtl"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.UserAuth.Auth.AuthFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/gradient_light_green"
        android:elevation="@dimen/_5sdp"
        android:fontFamily="@font/cabin_bold"
        android:text="@string/login_as_driver"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"
        app:srcCompat="@drawable/ic_logo" />

    <LinearLayout
        android:id="@+id/underlogo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_weight="1"
            android:fontFamily="@font/cairo"
            android:gravity="center"
            android:text="@string/with_continue"
            android:textColor="@color/main_color_text"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/terms_and_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_weight="1"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:text="@string/terms_and_privacy"
            android:textColor="@color/main_color_text"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>