<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".UI.Fragments.UserAuth.Auth.ConfirmCodFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:elevation="@dimen/_10sdp"
        app:cardBackgroundColor="@color/off_white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp">


            <TextView
                android:id="@+id/textView145"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/VerificationCode"
                android:textColor="@color/main_color_text"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/code_has_been_sent"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView145" />

            <TextView
                android:id="@+id/phone_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/cairo_bold"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <com.example.qareeb_driver.Helpers.Layouts.VerificationCodeView
                android:id="@+id/verificationCodeView"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/background_btn"
                android:backgroundTint="@color/white"
                android:layoutDirection="ltr"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_tv" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirm_cod_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/gradient_light_green"
                android:fontFamily="@font/cairo"
                android:text="@string/confirm_cod"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toTopOf="@+id/resend_cod_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.589"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verificationCodeView" />

            <TextView

                android:id="@+id/resend_cod_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/resend_cod"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/confirm_cod_btn"
                app:layout_constraintStart_toStartOf="@+id/confirm_cod_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>