<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.UserAuth.Auth.SignUpFragment"
    >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_weight="1"
            android:fontFamily="@font/cairo"
            android:gravity="center"
            android:text="@string/have_account"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_weight="1"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:text="@string/login1"
            android:textColor="@color/black" />
    </LinearLayout>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:elevation="@dimen/_10sdp"
            app:cardBackgroundColor="@color/off_white"
            app:cardCornerRadius="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/cairo_semibold"
                    android:text="@string/create_new_account"
                    android:textColor="@color/main_color_text"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/first_name_textlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:hint="@string/first_name"
                        app:boxBackgroundColor="@color/off_white"
                        app:boxCollapsedPaddingTop="@dimen/_3sdp"
                        app:layout_constraintEnd_toEndOf="@+id/include"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/include"
                        app:layout_constraintTop_toBottomOf="@+id/include">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableEnd="@drawable/ic_user_avatar_filled"
                            android:drawablePadding="@dimen/_15sdp"
                            android:fontFamily="@font/cairo"
                            android:textSize="@dimen/_12ssp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/last_name_textlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:hint="@string/last_name"
                        app:boxBackgroundColor="@color/off_white"
                        app:boxCollapsedPaddingTop="@dimen/_3sdp"
                        app:layout_constraintEnd_toEndOf="@+id/include"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/include"
                        app:layout_constraintTop_toBottomOf="@+id/include">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sure_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableEnd="@drawable/ic_user_avatar_filled"
                            android:drawablePadding="@dimen/_15sdp"
                            android:fontFamily="@font/cairo"
                            android:textSize="@dimen/_12ssp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_textlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:focusableInTouchMode="true"
                        android:hint="@string/email"
                        app:boxBackgroundColor="@color/off_white"
                        app:boxCollapsedPaddingTop="@dimen/_3sdp"
                        app:layout_constraintEnd_toEndOf="@+id/include"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/include"
                        app:layout_constraintTop_toBottomOf="@+id/include">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:drawableEnd="@drawable/ic_email"
                            android:drawablePadding="@dimen/_15sdp"
                            android:fontFamily="@font/cairo"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/_12ssp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <include
                        layout="@layout/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_textlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:focusableInTouchMode="true"
                        android:hint="@string/password"
                        app:boxBackgroundColor="@color/off_white"
                        app:boxCollapsedPaddingTop="@dimen/_3sdp"
                        app:layout_constraintEnd_toEndOf="@+id/include"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/include"
                        app:layout_constraintTop_toBottomOf="@+id/include"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:fontFamily="@font/cairo"
                            android:inputType="textPassword"
                            android:textSize="@dimen/_12ssp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/repassword_textlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:focusableInTouchMode="true"
                        android:hint="@string/confirm_password"
                        app:boxBackgroundColor="@color/off_white"
                        app:boxCollapsedPaddingTop="@dimen/_3sdp"
                        app:layout_constraintEnd_toEndOf="@+id/include"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/include"
                        app:layout_constraintTop_toBottomOf="@+id/include"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/re_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:fontFamily="@font/cairo"
                            android:inputType="textPassword"
                            android:textSize="@dimen/_12ssp" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sing_up_btn"
                    android:layout_width="@dimen/_225sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@drawable/background_btn"
                    android:elevation="@dimen/_30sdp"
                    android:fontFamily="@font/cairo_semibold"
                    android:text="@string/sing_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>